# gobject-sample

./: Makefile.am  autogen.sh  configure.ac
sample/: Makefile.am  greeter.c  greeter.h
